Text over scrollbar, page alignment and background bottom fixed

--- a/web/app/user/sass/components/_lightbox.scss
+++ b/web/app/user/sass/components/_lightbox.scss
@@ -233,7 +233,8 @@
 
 #content-wrapper {
   background: transparent url(/user/img/words/content_bg.png) -4px 0 no-repeat;
-  padding: 2% 3% 5% 5%;
+  padding: 2% 3% 5% 3%;
+  background-size: 100% 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -o-box-sizing: border-box;
@@ -241,6 +242,7 @@
   .content-bg {
     overflow: auto;
     height: 565px;
+    padding-right: 2em;
     @media screen and (max-width: 768px) {
       height: 665px;
     }
